# SmartFarmer-Webbot

./: .dockerignore  .gitignore  Dockerfile  Readme.md  app.py  main.py  pflanzenschutz_übersicht.py  pyproject.toml  requirements.txt  spritzintervall
.config/: config.yaml  logging.conf
data/: behandlungsintervall.csv  regenbestaendigkeit.csv  sortenanfaelligkeit.csv  sortenanfälligkeit.csv
functions/: fetch_sbr.py  fetch_smartfarmer.py  format_tbl.py  get_last_dates.py  google.py  init_driver.py  reformat_tbl.py
spINT/: SBR.py  __init__.py  __inti__.py  fetch_sbr.py  fetch_smartfarmer.py  google.py  init_driver.py  load_data.py  utils.py
spINT/data/: datatable.py  format.py  style.py
src/: __init__.py  config.py  driver.py  google.py  utils_OLD.py
src/clients/: smartfarmer_client.py
src/data_loaders/: static_data.py
src/processing/: data_processor.py
src/reporting/: reporter.py
src/utils/: helpers.py  web_driver.py
templates/: mail.html  mail_body.html  mail_template.html  main_page.html
