[project]
name = "smartfarmer-webbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pandas>=2.2.3",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "selenium>=4.31.0",
    "webdriver-manager>=4.0.2",
    "webhandler",
    "xlsx2csv>=0.8.4",
]

[tool.uv.sources]
webhandler = { path = "../WebHandler" }
